--- a/package.json
+++ b/package.json
@@ -14,6 +14,11 @@
   },
   "dependencies": {
     "gatsby": "^2.12.0",
+    "gatsby-image": "^2.2.3",
+    "gatsby-plugin-sharp": "^2.2.1",
+    "gatsby-source-filesystem": "^2.1.1",
+    "gatsby-transformer-json": "^2.2.0",
+    "gatsby-transformer-sharp": "^2.2.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6"
   },
