--- a/package.json
+++ b/package.json
@@ -1,14 +1,14 @@
 {
-  "name": "gatsby-starter-prologue",
+  "name": "portfolio-jeff-au",
   "version": "0.0.1",
-  "description": "Gatsby.js V2 starter template based on Prologue by HTML5 UP",
+  "description": "Porfolio for Jeff Au built with Gatsby.js, React, based on the theme \"prologue from HTML5UP ",
   "repository": {
     "type": "git",
     "url": "git+https://github.com/anubhavsrivastava/gatsby-starter-prologue.git"
   },
   "author": {
-    "name": "Anubhav Srivastava",
-    "email": "anubhav.srivastava00@gmail.com"
+    "name": "Anubhav Srivastava, Jeff Au",
+    "email": "anubhav.srivastava00@gmail.com, jeffau13@gmail.com"
   },
   "dependencies": {
     "gatsby": "^2.4.3",
