added styled components

--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "react-dom": "^16.8.6",
     "react-helmet": "^5.2.1",
     "react-scrollspy": "^3.4.0",
-    "smoothscroll-polyfill": "^0.4.4"
+    "smoothscroll-polyfill": "^0.4.4",
+    "styled-components": "^4.3.2"
   },
   "scripts": {
     "develop": "gatsby develop",
