--- a/package.json
+++ b/package.json
@@ -11,6 +11,11 @@
     "email": "anubhav.srivastava00@gmail.com, jeffau13@gmail.com"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^1.2.21",
+    "@fortawesome/free-brands-svg-icons": "^5.10.1",
+    "@fortawesome/free-regular-svg-icons": "^5.10.1",
+    "@fortawesome/free-solid-svg-icons": "^5.10.1",
+    "@fortawesome/react-fontawesome": "^0.1.4",
     "@material-ui/core": "^4.2.1",
     "@material-ui/icons": "^4.2.1",
     "gatsby": "^2.13.37",
@@ -36,6 +41,7 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "devDependencies": {
+    "@fortawesome/fontawesome-free": "^5.10.1",
     "gh-pages": "^2.0.1",
     "prettier": "^1.17.0",
     "rimraf": "^2.6.3"
