--- a/package.json
+++ b/package.json
@@ -18,12 +18,14 @@
     "@fortawesome/react-fontawesome": "^0.1.4",
     "@material-ui/core": "^4.2.1",
     "@material-ui/icons": "^4.2.1",
+    "@material-ui/styles": "^4.3.0",
     "babel-plugin-styled-components": "^1.10.6",
     "gatsby": "^2.13.37",
     "gatsby-plugin-manifest": "^2.1.1",
+    "gatsby-plugin-material-ui": "^2.1.5",
     "gatsby-plugin-offline": "^2.1.0",
     "gatsby-plugin-react-helmet": "^3.0.12",
-    "gatsby-plugin-sass": "^2.0.11",
+    "gatsby-plugin-sass": "^2.1.4",
     "gatsby-plugin-styled-components": "^3.1.2",
     "node-sass": "^4.12.0",
     "react": "^16.8.6",
