--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "react-dom": "^16.8.6",
     "react-helmet": "^5.2.1",
     "react-scrollspy": "^3.4.0",
+    "rich-text-to-react": "^1.0.1",
     "smoothscroll-polyfill": "^0.4.4",
     "styled-components": "^4.3.2"
   },
