--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-helmet": "^5.2.1",
+    "react-images": "^1.0.0",
     "react-scrollspy": "^3.4.0",
     "rich-text-to-react": "^1.0.1",
     "smoothscroll-polyfill": "^0.4.4",
