--- a/package.json
+++ b/package.json
@@ -39,7 +39,7 @@
     "styled-components": "^4.3.2"
   },
   "scripts": {
-    "develop": "gatsby develop",
+    "dev": "gatsby develop",
     "build": "npm run clean && gatsby build",
     "deploy": "npm run clean && gatsby build --prefix-paths && gh-pages -d public",
     "serve": "gatsby serve",
