--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "email": "anubhav.srivastava00@gmail.com, jeffau13@gmail.com"
   },
   "dependencies": {
+    "@contentful/rich-text-types": "^13.4.0",
     "@fortawesome/fontawesome-svg-core": "^1.2.21",
     "@fortawesome/free-brands-svg-icons": "^5.10.1",
     "@fortawesome/free-regular-svg-icons": "^5.10.1",
