--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@material-ui/styles": "^4.3.0",
     "babel-plugin-styled-components": "^1.10.6",
     "gatsby": "^2.13.37",
+    "gatsby-plugin-google-analytics": "^2.1.8",
     "gatsby-plugin-manifest": "^2.1.1",
     "gatsby-plugin-material-ui": "^2.1.5",
     "gatsby-plugin-offline": "^2.1.0",
